[gd_scene load_steps=11 format=3 uid="uid://bubjpywovpeuc"]

[ext_resource type="Script" uid="uid://c7g3yr0yusxps" path="res://features/main_menu/main_menu.gd" id="1_nya6c"]
[ext_resource type="Texture2D" uid="uid://dj2usxcjps83x" path="res://Textures/ui/hotbar/wide_button.png" id="2_5kmfg"]
[ext_resource type="Texture2D" uid="uid://201n1nb6xpkq" path="res://features/main_menu/menu.png" id="2_x02ou"]
[ext_resource type="Texture2D" uid="uid://cgi2aqoj35l7t" path="res://Textures/ui/hotbar/wide_button-press.png" id="3_5kmfg"]
[ext_resource type="Texture2D" uid="uid://dcmik0faacihl" path="res://Textures/ui/hotbar/wide_button-hover.png" id="4_57wsn"]
[ext_resource type="Script" uid="uid://ctec1v4kqnh5" path="res://features/main_menu/button_animation.gd" id="5_5bpxy"]
[ext_resource type="AudioStream" uid="uid://ciwrducd7rdgy" path="res://audio/MainMenu.mp3" id="7_57wsn"]
[ext_resource type="FontFile" uid="uid://bm7nyahvopy2w" path="res://Fonts/Pixel (47)/Diary of an 8-bit mage.otf" id="7_x02ou"]
[ext_resource type="Texture2D" uid="uid://cfyc14bmj580l" path="res://Textures/ui/credits.png" id="9_x02ou"]

[sub_resource type="LabelSettings" id="LabelSettings_epxoq"]
font = ExtResource("7_x02ou")
font_size = 9
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nya6c")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_x02ou")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -115.0
offset_top = 29.0
offset_right = -67.0
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="TextureButton" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("2_5kmfg")
texture_pressed = ExtResource("3_5kmfg")
texture_hover = ExtResource("4_57wsn")
script = ExtResource("5_5bpxy")

[node name="StartLabel" type="Label" parent="VBoxContainer/StartButton"]
unique_name_in_owner = true
layout_mode = 2
offset_top = -1.0
offset_right = 48.0
offset_bottom = 16.0
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("7_x02ou")
theme_override_font_sizes/font_size = 8
text = "Start"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CreditsButton" type="TextureButton" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("2_5kmfg")
texture_pressed = ExtResource("3_5kmfg")
texture_hover = ExtResource("4_57wsn")
script = ExtResource("5_5bpxy")

[node name="CreditsLabel" type="Label" parent="VBoxContainer/CreditsButton"]
layout_mode = 2
offset_top = -1.0
offset_right = 48.0
offset_bottom = 16.0
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("7_x02ou")
theme_override_font_sizes/font_size = 8
text = "Credits"
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuitButton" type="TextureButton" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
texture_normal = ExtResource("2_5kmfg")
texture_pressed = ExtResource("3_5kmfg")
texture_hover = ExtResource("4_57wsn")
script = ExtResource("5_5bpxy")

[node name="QuitLabel" type="Label" parent="VBoxContainer/QuitButton"]
unique_name_in_owner = true
layout_mode = 2
offset_right = 48.0
offset_bottom = 17.0
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("7_x02ou")
theme_override_font_sizes/font_size = 8
text = "Quit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_57wsn")
autoplay = true

[node name="Credits" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -71.0
offset_right = 133.0
offset_bottom = 71.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("9_x02ou")

[node name="Label" type="Label" parent="Credits"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.0
offset_top = -34.5
offset_right = 47.0
offset_bottom = 34.5
grow_horizontal = 2
grow_vertical = 2
text = "Tomasz Pawełczyk
Kacper Grabowiec
Artem Storozhuk
Sabina Pawłów
Paulina Maculewicz
Wiktoria Małecka"
label_settings = SubResource("LabelSettings_epxoq")

[connection signal="mouse_entered" from="VBoxContainer/StartButton" to="VBoxContainer/StartButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/StartButton" to="VBoxContainer/StartButton" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="VBoxContainer/CreditsButton" to="VBoxContainer/CreditsButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/CreditsButton" to="VBoxContainer/CreditsButton" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="VBoxContainer/QuitButton" to="VBoxContainer/QuitButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/QuitButton" to="VBoxContainer/QuitButton" method="_on_mouse_exited"]
